# ai-books

./: .env.example  .gitignore  .gitleaks.toml  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  README.md  compose.yaml  pyproject.toml
.claude/: settings.json
.claude/agents/: README.md  etax-spec-author.md  mcp-tool-author.md  migration-author.md  report-author.md
.claude/commands/: etax-validate.md  new-mcp-tool.md  new-migration.md  new-report.md  test-all.md  test.md  verify.md
.claude/hooks/: format-after-edit.py  guard-never-touch.py
.cursor/rules/: ai-books.mdc
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/workflows/: ci.yml  etax-spec-watch.yml  prod-smoke.yml
docs/: README.md  pr-description-standards.md
docs/adr/: 0001-pivot-to-supabase-and-vercel-viewer.md  0002-journal-write-model-soft-void-and-sequence-voucher.md  0003-csv-import-draft-suspense-and-hash-dedup.md  0004-pooler-safe-db-client-default.md  0005-statement-category-on-accounts-base-table.md  0006-etax-real-koa210-and-uncommitted-xsd.md  0007-etax-scope-general-form-and-delegated-filing.md  0008-remote-mcp-single-tenant-auth.md  0009-retain-dormant-remote-mcp.md  README.md  template.md
docs/ai/: best-practices-survey.md  hooks-and-guardrails.md
docs/architecture/: README.md
docs/etax/: README.md  aoiro-65man-requirements.md  field_catalog.json  handoff-runbook.md  manifest.json  snapshot_mapping.json
docs/ops/: prod-smoke.md
docs/remote/: deploy-runbook.md
docs/usage/: capabilities.md
scripts/: check_coverage.py  lint_claude_settings.py  seed_verify_db.py  test.sh  verify.sh  verify_web_vercel_build.sh
scripts/etax/: build_etax_layout.py  build_field_catalog.py  build_koa210_layout.py  fetch_etax_spec.py  sync_web_layouts.py
scripts/prod_smoke/: check.sh
src/ai_books/: __init__.py  aggregation.py  audit.py  auth.py  db.py  errors.py  ledger.py  server.py
src/ai_books/db/: __init__.py  migrate.py  repository.py  schema_snapshot.py
src/ai_books/etax/: __init__.py  export.py  koa210_layout.json  koa220_layout.json  koa240_layout.json  preflight.py  profile.py  spec.py  xsd.py
src/ai_books/models/: __init__.py  account.py  aggregation.py  agricultural.py  audit.py  base.py  enums.py  etax.py  financial_statements.py  imports.py  journal.py  period.py  query.py  real_estate.py  report.py  statement.py  worksheet.py
src/ai_books/reports/: __init__.py  format.py
src/ai_books/seed/: __init__.py  accounts.py
src/ai_books/services/: __init__.py  csv_import.py  journal.py
supabase/: .gitignore  config.toml
supabase/migrations/: 20260604000001_accounts.sql  20260604000002_journal.sql  20260604000003_fiscal_periods.sql  20260604000004_audit_logs.sql  20260604000005_read_indexes.sql  20260604000006_journal_write.sql  20260604000007_csv_import.sql
supabase/roles/: viewer_readonly.sql
tests/: conftest.py  etax_xsd.py  test_agent_scaffolds.py  test_aggregation.py  test_aggregation_db.py  test_audit.py  test_auth.py  test_auth_audit_db.py  test_csv_import.py  test_db.py  test_errors.py  test_etax.py  test_etax_koa220_koa240.py  test_etax_preflight.py  test_etax_profile.py  test_etax_spec_watch.py  test_etax_xtx.py  test_hooks_guard.py  test_journal_write.py  test_ledger.py  test_mcp_client.py  test_mcp_contract.py  test_migrate.py  test_models.py  test_pooler_db.py  test_property_invariants.py  test_property_invariants_db.py  test_read_tools.py  test_readonly_db.py  test_readonly_role.py  test_reports.py  test_repository.py  test_schema_snapshot.py  test_seed.py  test_seed_db.py  test_seed_fy.py  test_seed_fy_db.py  test_server_http.py  test_server_stdio.py  test_smoke.py
tests/fixtures/: __init__.py  readonly.py
tests/fixtures/csv/: __init__.py  __main__.py  bank_sample.csv  card_sample.csv  golden.py
tests/fixtures/csv/golden/: bank.json  card.json
tests/fixtures/schema/: schema.sql
tests/fixtures/seed_fy/: README.md  __init__.py  __main__.py  agricultural.py  dataset.py  edge_cases.py  generators.py  golden.py  loader.py  public_sample.py  real_estate.py  reports.py
tests/fixtures/seed_fy/golden/: agricultural_income.json  balance_sheet.json  etax_export.json  etax_export_koa220.json  etax_export_koa240.json  etax_xtx.json  etax_xtx_koa220.json  etax_xtx_koa240.json  financial_statements.json  general_ledger.json  (+6 more)
web/: .env.example  .gitignore  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  proxy.ts  tsconfig.json  vitest.config.ts
web/app/: fonts.ts  globals.css  layout.tsx  page.tsx
web/app/bs/: page.tsx
web/app/etax/: page.tsx
web/app/journal/: page.tsx
web/app/ledger/: page.tsx
web/app/login/: actions.ts  page.tsx
web/app/monthly-trend/: page.tsx
web/app/pl/: page.tsx
web/app/statements/: page.tsx
web/app/trial-balance/: page.tsx
web/app/worksheet/: page.tsx
web/components/: amount.tsx  banner.tsx  bs-tables.tsx  nav.tsx  period-selector.tsx  pl-table.tsx  print-button.tsx  report-header.tsx
web/e2e/: a11y-allowlist.json  a11y-allowlist.ts  a11y.spec.ts  auth.setup.ts  auth.spec.ts  etax-download.spec.ts  golden-dom.spec.ts  smoke.spec.ts  users.ts  visual.spec.ts
web/e2e/helpers/: golden.ts
web/lib/: db.ts  format.test.ts  format.ts  money.test.ts  money.ts  routes.ts  viewer-accessibility.test.ts
web/lib/auth/: allowlist.test.ts  allowlist.ts  env.ts  request-context.test.ts  request-context.ts
web/lib/etax/: export.test.ts  export.ts  layouts.test.ts  sample.ts  spec.test.ts  spec.ts
web/lib/reports/: aggregation.test.ts  agricultural-income.ts  balance-sheet.ts  context.test.ts  context.ts  filters.test.ts  filters.ts  financial-statements.ts  fiscal-year.ts  general-ledger.ts  income-samples.test.ts  journal-book.ts  ledger-reports.test.ts  ledger.test.ts  ledger.ts  month.test.ts  month.ts  monthly-trend.ts  profit-and-loss.ts  real-estate-income.ts  sql.ts  trial-balance.ts  types.test.ts  types.ts  worksheet.ts
web/lib/supabase/: middleware.ts  server.ts
web/scripts/: verify-golden.ts  visual-docker.sh
(+16 files in other folders)
