[project]
name = "ai-books"
version = "0.0.1"
description = "AI-first accounting MCP server — interface for AI agents, not humans"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Kenichiro Nishioka" }]
keywords = ["accounting", "bookkeeping", "mcp", "model-context-protocol", "ai"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Office/Business :: Financial :: Accounting",
]
dependencies = [
  "fastmcp>=2.0",
  "pydantic>=2.7",
]

[project.urls]
Homepage = "https://github.com/knishioka/ai-books"
Issues = "https://github.com/knishioka/ai-books/issues"

[project.scripts]
ai-books = "ai_books.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_books"]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
  "mypy>=1.10",
  "pre-commit>=4.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF", "SIM", "PT"]
ignore = ["E501"] # line length handled by formatter

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["fastmcp.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
